[metadata]
name = sqt
url = https://github.com/nelimee/sqt
author = Adrien Suau
description = Single Qubit Tomography package developped during the Quantum Computing Summer School 2021 at Los Alamos National Laboratory
long_description = file: README.md
long_description_content_type = text/markdown; variant=GFM
license_files = LICENSE
keywords = quantum tomography single qubit
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering

[options]
packages = find_namespace:
package_dir=
    = src                 
install_requires =
    qiskit
    numpy
    rich
    
[options.packages.find]
where = src
exclude = tests*

[options.entry_points]
console_scripts =
    sqt_bloch_tomography_submit = sqt._cli.bloch_tomography_submit:main
    sqt_bloch_tomography_recover = sqt._cli.bloch_tomography_recover:main

[options.extras_require]
dev =
    ipython
    black
all =
    %(dev)s
